--- a/SAM_UI/SAM.Analytical.UI/SAM.Analytical.UI.csproj
+++ b/SAM_UI/SAM.Analytical.UI/SAM.Analytical.UI.csproj
@@ -42,23 +42,23 @@
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="SAM.Analytical">
-      <HintPath>..\..\..\..\SAM\build\SAM.Analytical.dll</HintPath>
+      <HintPath>..\..\..\SAM\build\SAM.Analytical.dll</HintPath>
     </Reference>
     <Reference Include="SAM.Analytical.Mollier">
-      <HintPath>..\..\..\..\SAM_Mollier\build\SAM.Analytical.Mollier.dll</HintPath>
+      <HintPath>..\..\..\SAM_Mollier\build\SAM.Analytical.Mollier.dll</HintPath>
     </Reference>
     <Reference Include="SAM.Analytical.SolarCalculator">
-      <HintPath>..\..\..\..\SAM_SolarCalculator\build\SAM.Analytical.SolarCalculator.dll</HintPath>
+      <HintPath>..\..\..\SAM_SolarCalculator\build\SAM.Analytical.SolarCalculator.dll</HintPath>
     </Reference>
     <Reference Include="SAM.Analytical.Tas">
-      <HintPath>..\..\..\..\SAM_Tas\build\SAM.Analytical.Tas.dll</HintPath>
+      <HintPath>..\..\..\SAM_Tas\build\SAM.Analytical.Tas.dll</HintPath>
     </Reference>
     <Reference Include="SAM.Analytical.Windows">
-      <HintPath>..\..\..\..\SAM_Windows\Framework\build\SAM.Analytical.Windows.dll</HintPath>
+      <HintPath>..\..\..\SAM_Windows\Framework\build\SAM.Analytical.Windows.dll</HintPath>
     </Reference>
     <Reference Include="SAM.Architectural, Version=1.0.8551.22422, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\SAM\build\SAM.Architectural.dll</HintPath>
+      <HintPath>..\..\..\SAM\build\SAM.Architectural.dll</HintPath>
     </Reference>
     <Reference Include="SAM.Core, Version=1.0.8236.21308, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -72,7 +72,7 @@
       <HintPath>..\..\..\..\SAM_Mollier\build\SAM.Core.Mollier.dll</HintPath>
     </Reference>
     <Reference Include="SAM.Core.Tas">
-      <HintPath>..\..\..\..\SAM_Tas\build\SAM.Core.Tas.dll</HintPath>
+      <HintPath>..\..\..\SAM_Tas\build\SAM.Core.Tas.dll</HintPath>
     </Reference>
     <Reference Include="SAM.Core.Windows">
       <HintPath>..\..\..\..\SAM_Windows\Framework\build\SAM.Core.Windows.dll</HintPath>
@@ -86,14 +86,14 @@
       <HintPath>..\..\..\..\SAM_Mollier\build\SAM.Geometry.Mollier.dll</HintPath>
     </Reference>
     <Reference Include="SAM.Geometry.SolarCalculator">
-      <HintPath>..\..\..\..\SAM_SolarCalculator\build\SAM.Geometry.SolarCalculator.dll</HintPath>
+      <HintPath>..\..\..\SAM_SolarCalculator\build\SAM.Geometry.SolarCalculator.dll</HintPath>
     </Reference>
     <Reference Include="SAM.Weather, Version=1.0.8236.30909, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\SAM\build\SAM.Weather.dll</HintPath>
     </Reference>
     <Reference Include="SAM.Weather.Tas">
-      <HintPath>..\..\..\..\SAM_Tas\build\SAM.Weather.Tas.dll</HintPath>
+      <HintPath>..\..\..\SAM_Tas\build\SAM.Weather.Tas.dll</HintPath>
     </Reference>
     <Reference Include="SAM.Weather.Windows">
       <HintPath>..\..\..\..\SAM_Windows\Framework\build\SAM.Weather.Windows.dll</HintPath>
