--- a/SAM_UI/SAM.Core.UI/SAM.Core.UI.csproj
+++ b/SAM_UI/SAM.Core.UI/SAM.Core.UI.csproj
@@ -34,7 +34,7 @@
   <ItemGroup>
     <Reference Include="PresentationCore" />
     <Reference Include="SAM.Core">
-      <HintPath>..\..\..\..\SAM\build\SAM.Core.dll</HintPath>
+      <HintPath>..\..\..\SAM\build\SAM.Core.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
