--- a/WPF/SAM.Analytical.UI.WPF/SAM.Analytical.UI.WPF.csproj
+++ b/WPF/SAM.Analytical.UI.WPF/SAM.Analytical.UI.WPF.csproj
@@ -436,13 +436,22 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="HelixToolkit.Wpf">
-      <Version>2.25.0</Version>
+      <Version>2.27.0</Version>
     </PackageReference>
     <PackageReference Include="HoneybeeSchema">
-      <Version>1.51.5.1</Version>
+      <Version>1.5900.4</Version>
+    </PackageReference>
+    <PackageReference Include="itext7">
+      <Version>9.2.0</Version>
+    </PackageReference>
+    <PackageReference Include="iTextSharp">
+      <Version>5.5.13.4</Version>
+    </PackageReference>
+    <PackageReference Include="NetOfficeFw.Excel">
+      <Version>1.9.7</Version>
     </PackageReference>
     <PackageReference Include="NetTopologySuite">
-      <Version>2.5.0</Version>
+      <Version>2.6.0</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>13.0.3</Version>
