--- a/Application/SAM Weather/SAM Weather.csproj
+++ b/Application/SAM Weather/SAM Weather.csproj
@@ -12,13 +12,13 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="SAM.Core">
-      <HintPath>..\..\..\..\SAM\build\SAM.Core.dll</HintPath>
+      <HintPath>..\..\..\SAM\build\SAM.Core.dll</HintPath>
     </Reference>
     <Reference Include="SAM.Weather">
-      <HintPath>..\..\..\..\SAM\build\SAM.Weather.dll</HintPath>
+      <HintPath>..\..\..\SAM\build\SAM.Weather.dll</HintPath>
     </Reference>
     <Reference Include="SAM.Weather.Windows">
-      <HintPath>..\..\..\SAM_Windows\Core\build\SAM.Weather.Windows.dll</HintPath>
+      <HintPath>..\..\..\SAM_Windows\build\SAM.Weather.Windows.dll</HintPath>
     </Reference>
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -27,6 +27,6 @@
     <Content Include="SAM.ico" />
   </ItemGroup>
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="set SAM_DIR=$(APPDATA)\SAM\&#xD;&#xA;if not exist &quot;%2525SAM_DIR%2525&quot; mkdir &quot;%2525SAM_DIR%2525&quot;&#xD;&#xA;&#xD;&#xA;xcopy &quot;$(SolutionDir)\files\resources&quot; &quot;$(APPDATA)\SAM\resources&quot; /Y/I/E/S&#xD;&#xA;xcopy &quot;$(SolutionDir)\files\resources&quot; &quot;$(USERPROFILE)\Documents\SAM\resources&quot; /Y/D/I/E/S&#xD;&#xA;&#xD;&#xA;copy &quot;$(TargetDir)*.dll&quot; &quot;%2525SAM_DIR%2525&quot;&#xD;&#xA;copy &quot;$(TargetDir)*.exe&quot; &quot;%2525SAM_DIR%2525&quot;&#xD;&#xA;copy &quot;$(TargetDir)*.config&quot; &quot;%2525SAM_DIR%2525&quot;" />
+    <Exec Command="set SAM_DIR=$(APPDATA)\SAM\&#xD;&#xA;if not exist &quot;%25SAM_DIR%25&quot; mkdir &quot;%25SAM_DIR%25&quot;&#xD;&#xA;&#xD;&#xA;xcopy &quot;$(SolutionDir)\files\resources&quot; &quot;$(APPDATA)\SAM\resources&quot; /Y/I/E/S&#xD;&#xA;xcopy &quot;$(SolutionDir)\files\resources&quot; &quot;$(USERPROFILE)\Documents\SAM\resources&quot; /Y/D/I/E/S&#xD;&#xA;&#xD;&#xA;copy &quot;$(TargetDir)*.dll&quot; &quot;%25SAM_DIR%25&quot;&#xD;&#xA;copy &quot;$(TargetDir)*.exe&quot; &quot;%25SAM_DIR%25&quot;&#xD;&#xA;copy &quot;$(TargetDir)*.config&quot; &quot;%25SAM_DIR%25&quot;" />
   </Target>
 </Project>
